frontend/src/Routes/Tech/Tech.css
.techWrap {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 2;
    width: 500px;
    margin: 0 auto;
}

.techWrap div {
    width: 45%;
    margin-top: 16px;
}

.techWrap div h3 {
    word-wrap: normal;
}

.techWrap div p {
    text-align: center;
}

.fadeIn1,
.fadeIn3 {
    opacity: 0;
    margin: 0 auto 16px;
    width: 50%;
    animation: fadeInLeftToRight 1.25s ease-in forwards;
}

.fadeIn2,
.fadeIn4 {
    opacity: 0;
    margin: 0 auto;
    width: 50%;
    animation: fadeInRightToLeft 1.25s ease-in forwards;
}

.fadeIn2 {
    animation-delay: 0.2s;
}

.fadeIn3 {
    animation-delay: 0.4s;
}

.fadeIn4 {
    animation-delay: 0.6s;
}

@keyframes fadeInLeftToRight {
    0% {
        opacity: 0;
        transform-origin: center left;
        transform: rotateY(90deg);
    }

    100% {
        opacity: 1;
        transform: rotateY(0deg);
    }
}

@keyframes fadeInRightToLeft {
    0% {
        opacity: 0;
        transform-origin: center right;
        transform: rotateY(90deg);
    }

    100% {
        opacity: 1;
        transform: rotateY(0deg);
    }
}

@media (max-width: 500px) {
    .techWrap {
        width: 100%;
    }

    .techWrap h3,
    .techWrap p {
        font-size: 0.8em;
    }
}

